--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,6 +2,11 @@ NULL =
 
 BUILT_SOURCES =
 
+SUBDIRS = \
+	displays.d	\
+	sessions.d	\
+        $(NULL)
+
 dbusconfdir = $(DBUS_SYS_DIR)
 dbusconf_DATA = ConsoleKit.conf
 
