Add man page for ck-seat-tool
Taken from https://bugs.freedesktop.org/show_bug.cgi?id=24824

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -5,6 +5,7 @@ manpage_DATA =            \
 	ck-history.1          \
 	ck-launch-session.1   \
 	ck-list-sessions.1    \
+	ck-seat-tool.1m       \
 	console-kit-daemon.1m
 
 EXTRA_DIST = \
